# conan-dyad

./: CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.ci/: install.sh
.travis/: install.sh
test_package/: CMakeLists.txt  test_package.c
